--- a/css/style.scss
+++ b/css/style.scss
@@ -8,7 +8,9 @@ body{
   }
 .text0{
     text-align: center;
+   
 }
+
 .logo{
     border:0px solid black;
    padding-bottom: 50px;
@@ -16,6 +18,9 @@ body{
     display: flex;
     align-items: center;
     flex-direction: column;
+    img{
+    max-width: 100%;
+    }
 }
 .header{
     font-size: medium;
@@ -36,6 +41,7 @@ body{
     justify-content: space-evenly;
     border:0px solid black;
     padding-bottom: 10px;
+    
 
 }
 .opisy{
@@ -55,6 +61,14 @@ body{
     display: flex;
     align-items: center;
     flex-direction: column;
+    
+
+    img {
+      
+        
+        max-width: 100%;
+    }
+
 }
 .article3{
    padding-top: 50px;
@@ -64,6 +78,10 @@ body{
     align-items: center;
     flex-direction: row;
     justify-content: space-between;
+    img{
+        max-width: 100%;
+    }
+
 }
 
 
